--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,16 @@
+auxiliary.org-netbeans-modules-css-prep.less_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.less_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.less_2e_mappings=/less:/css
+auxiliary.org-netbeans-modules-css-prep.sass_2e_compiler_2e_options=
+auxiliary.org-netbeans-modules-css-prep.sass_2e_enabled=false
+auxiliary.org-netbeans-modules-css-prep.sass_2e_mappings=/scss:/css
+auxiliary.org-netbeans-modules-web-clientproject-api.js_2e_libs_2e_folder=javascript
 browser.autorefresh.Chrome.INTEGRATED=true
 browser.highlightselection.Chrome.INTEGRATED=true
 config.folder=
 file.reference.Dropbox-ICS4U=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.Dropbox-ICS4U}
-start.file=chooseDifficulty.html
+start.file=mainMenu.html
 test.folder=
 web.context.root=/ICS4U
