--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -11,6 +11,6 @@ config.folder=
 file.reference.Dropbox-ICS4U=.
 files.encoding=UTF-8
 site.root.folder=${file.reference.Dropbox-ICS4U}
-start.file=mainMenu.html
+start.file=highScores.html
 test.folder=
 web.context.root=/ICS4U
